@@ -2,6 +2,8 @@
 
 namespace App\Http\Controllers;
 
+use App\Http\Requests\UserRegisterRequest;
+use App\User;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Auth;
 
@@ -10,7 +12,7 @@ class chkLoginController extends Controller
     public function getLogin()
     {
         if (Auth::check()) {
-            return view('layouts.app');
+            return redirect()->route('admin');
         } else {
             return view('auth.login');
         }
@@ -27,11 +29,30 @@ class chkLoginController extends Controller
 
         if (Auth::attempt(['email' => $request->email, 'password' => $request->password])) {
             return redirect()->route('admin');
-            // return Auth::user()->role;
         } else {
-            return redirect()->route('login');
+            return redirect()->route('getLogin')->with(['flash_message_title' => 'Login Fail', 'flash_message_content' => 'Email or Password not correct. Please try again!']);
         }
 
+    }
+
+    public function getRegister()
+    {
+        return view('auth.register');
+    }
+
+    public function postRegister(UserRegisterRequest $request)
+    {
+        try {
+            $user = new User;
+            $user->name = $request->name;
+            $user->email = $request->email;
+            $user->password = bcrypt($request->password);
+            $user->role = 'user';
+            $user->save();
+            return redirect()->route('getLogin')->with(['flash_type' => 'success', 'flash_message' => 'Success!!! Register success. Please login to continue.']);
+        } catch (Exception $e) {
+            return redirect()->route('getRegister')->with(['flash_type' => 'danger', 'flash_message' => 'Fail!!! Register fail. Please try again.']);
+        }
     }
 
     public function getLogout()
