@@ -71,8 +71,8 @@
                     @auth
                         <a href="{{ url('/home') }}">Home</a>
                     @else
-                        <a href="{{ route('login') }}">Login</a>
-                        <a href="{{ route('register') }}">Register</a>
+                        <a href="{{ route('getLogin') }}">Login</a>
+                        <a href="{{ route('getRegister') }}">Register</a>
                     @endauth
                 </div>
             @endif
